docs(web-container): 更新 Tomcat 文档内容